added images to the landing page and dynamic title population

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="A portofolio website for Peggy Atherton, an artist and sculptor. The website features a unique tube-shaped layout with interactive elements that respond to user scrolling. Each section of the tube contains different titles and images that change as the user scrolls through the page." />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <title>Peggy Atherton</title>
   </head>
   <body style="height:3000px">
@@ -21,65 +22,75 @@
         <div class="tube__text__wrapper">
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 1</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 2</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 3</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 4</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 5</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 6</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 7</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 8</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 9</span>
+              <span class="focus-layer"></span>
             </span>
           </div>
           <div class="tube__item">
             <span class="tube__text__item">
-              <span class="focus-layer">Title 10</span>
+              <span class="focus-layer"></span>
+            </span>
+          </div>
+          <div class="tube__item">
+            <span class="tube__text__item">
+              <span class="focus-layer"></span>
+            </span>
+          </div>
+          <div class="tube__item">
+            <span class="tube__text__item">
+              <span class="focus-layer">Leggy Peggy</span>
             </span>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="grid grid-cols-3 text-center fixed bottom-10 w-full">
-      <h2>Name | Logo</h2>
-      <h2>About</h2>
-      <h2>CV / Contact</h2>
+    <section id="about-section" class="grid grid-cols-3 text-center fixed bottom-10 w-full">
+      <h2>Peggy Atherton</h2>
+      <h2><a href="">About</a></h2>
+      <h2><a href="">CV | Contact</a></h2>
     </section>
 
 
-    <script type="module" src="src/main.js"></script>
+    <script type="module" src="public/js/main.js"></script>
   </body>
 </html>
