--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@
       <h2><a href="">CV | Contact</a></h2>
     </section>
 
+    <!-- <footer>
+      <div>
+        <h4>Design and Development</h4>
+        <span>Malvina Janasik</span>
+      </div>
+<div>
+        <h4>Typefaces</h4>
+        <span>Velvelyne</span>
+      </div> -->
+      <!-- <div>
+        <h4>Copyright</h4>
+        <span>&copy; 2026 Peggy Atherton</span>
+      </div>
+    </footer>  -->
+
 
     <script type="module" src="public/js/main.js"></script>
   </body>
